# solstice-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs  models.rs  store.rs
src/routes/: health.rs  mod.rs  tasks.rs
