[package]
name = "solstice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0"
anyhow = "1.0"
time = { version = "0.3", features = ["macros", "serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
prometheus = "0.13"
axum-prometheus = "0.6"
utoipa = { version = "4", features = ["axum_extras", "uuid", "time", "serde-json"] }
utoipa-swagger-ui = { version = "7", features = ["axum", "vendored"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
